[project]
name = "kilo-http-media-server"
version = "0.1.0"
description = "A lightweight HTTP media server for viewing photos and videos"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "aiofiles>=23.2.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["main"]

[tool.uv]
dev-dependencies = []
